--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
-logging.level.org.zalando.logbook=TRACE
+logging.level.org.zalando.logbook=OFF
 
 # TODO Append connection to Postgres DB
 #spring.datasource.driverClassName
