--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 logging.level.org.zalando.logbook=OFF
+server.port=8080
 
 # TODO Append connection to Postgres DB
 #spring.datasource.driverClassName
