--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -11,3 +11,10 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 #spring.datasource.url
 #spring.datasource.username
 #spring.datasource.password
+
+spring.datasource.url=jdbc:h2:file:./db/shareIt
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
