--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 logging.level.org.springframework.orm.jpa=INFO
@@ -12,7 +12,10 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 #spring.datasource.username
 #spring.datasource.password
 
-spring.datasource.url=jdbc:h2:file:./db/shareIt
+spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.url=jdbc:h2:file:./db/shareIt
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
