--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,16 +11,16 @@ logging.level.org.zalando.logbook=OFF
 server.port=8080
 
 # TODO Append connection to Postgres DB
-#spring.datasource.driverClassName
-#spring.datasource.url
-#spring.datasource.username
-#spring.datasource.password
-
-spring.datasource.url=jdbc:h2:file:./db/shareIt
 spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./db/shareIt
 spring.datasource.username=sa
 spring.datasource.password=password
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+
+#spring.datasource.url=jdbc:h2:file:./db/shareIt
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
 
 
