--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -1,8 +1,59 @@
 name: ShareIt API Tests
 
 on:
+  push:
+    branches: [ "**" ]
   pull_request:
+    branches: [ "**" ]
 
 jobs:
-  build:
-    uses: yandex-praktikum/java-shareit/.github/workflows/api-tests.yml@ci
+  api-tests:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: 'maven'
+
+      - name: Build application
+        run: mvn clean package -DskipTests
+
+      - name: Install Newman
+        run: npm install -g newman
+
+      - name: Create reports directory
+        run: mkdir -p reports
+
+      - name: Run Application and Tests
+        run: |
+          
+          echo "Starting application..."
+          java -jar target/shareit-0.0.1-SNAPSHOT.jar &
+          APP_PID=$!
+          
+          
+          echo "Waiting for application to start..."
+          sleep 45
+          
+          
+          echo "Checking health endpoint..."
+          curl -f http://localhost:8080/health || echo "Health check failed"
+          
+        
+          echo "Running tests..."
+          newman run ./tests/postman/sprint.json \
+            --delay-request 100 \
+            --timeout-request 60000 \
+            -r cli,htmlextra \
+            --reporter-htmlextra-export reports/shareIt.html \
+            --reporter-htmlextra-title "Отчет по тестам" \
+            --reporter-htmlextra-logs true
+          
+          
+          echo "Stopping application..."
+          kill $APP_PID
