--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -7,14 +7,14 @@ logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
 # TODO Append connection to H2 DB
-spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.url=jdbc:h2:file:./db/shareIt
-spring.datasource.url=jdbc:h2:mem:shareitdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.username=sa
-spring.datasource.password=password
+#spring.datasource.url=jdbc:h2:mem:shareitdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.username=sa
+#spring.datasource.password=password
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.show-sql=true
 
 
 
