--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -10,7 +10,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>shareIt-gateway</artifactId>
+    <artifactId>gateway</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
